<resources>
    <string name="app_name">OneLeft</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="by_continuing_you_agree"><![CDATA[By continuing, you agree to accept our\nPrivacy Policy & Terms of Service]]></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">Enter you email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="re_enter_your_email">Re-Enter Your Email</string>
    <string name="next">Next</string>
    <string name="we_have_sent_an_otp_code_to_your_email_address">We Have Sent An OTP Code To Your Email Address</string>
    <string name="enter_the_4_digit_code_sent_to_you_at_s_did_you_enter_the_correct_email_address">Enter the 4-digit code sent to you at your email address.</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="complete">Complete</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="pay">Pay</string>
    <string name="i_agree">I Agree</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="payment">Payment</string>
    <string name="history">History</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="didn_t_receive">Didn\'t Receive?</string>
    <string name="click_here">Click Here</string>
    <string name="stripe_account">Withdrawal</string>
</resources>