<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:scrollbarThumbVertical="@null"
    tools:context=".activities.ProfileCompleteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGO"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/complete_your_profile"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="12dp"
                android:text="@string/username"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                style="@style/BaseCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="Enter User Name"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                style="@style/BaseCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="12dp"
                android:text="@string/confirm_password"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                style="@style/BaseCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/BaseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:hint="@string/re_enter_your_password"
                    android:inputType="textPassword" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnComplete"
                style="@style/PrimaryButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/complete" />

            <TextView
                android:id="@+id/tvAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/by_continuing_you_agree"
                android:textColorLink="@color/primaryTextColor" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>