<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:scrollbarThumbVertical="@null"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">


                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/ii"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/welcome"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="12dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <androidx.cardview.widget.CardView
                    style="@style/BaseCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/BaseCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etConfirmEmail"
                        style="@style/BaseEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:hint="@string/re_enter_your_email"
                        android:inputType="textEmailAddress" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/PrimaryButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/tvAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/by_continuing_you_agree"
                    android:textColorLink="@color/primaryTextColor"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>